# Beacon_artifact

./: README.md
Fuzzer/: afl-fuzz
Ins/: CMakeLists.txt  Readme.txt  WPInferenceInterface.h  config.h  deserialize.cpp  deserialize.h  main.cpp
Test/: cstest.txt  swftophp-2017-7578.bc
precondInfer/: CMakeLists.txt
precondInfer/include/klee/: SymbolicAbstractInterface.h  WPInferenceInterface.h
precondInfer/include/klee/util/: ArrayExprHash.h
precondInfer/lib/: CMakeLists.txt
precondInfer/lib/BackwardAnalysis/: AbstractState.cpp  AbstractState.h  AliasICFG.cpp  AliasICFG.h  BackwardAnalysis.cpp  CMakeLists.txt  InstructionDbgInfo.cpp  InstructionDbgInfo.h  RangeAnalysis.cpp  RangeAnalysis.h  RangeComputeInterface.cpp  WPCondition.cpp  WPCondition.h  WPInferenceInterface.cpp
precondInfer/lib/Expr/: ArrayExprVisitor.h  CMakeLists.txt  Constraints.cpp
precondInfer/tools/: CMakeLists.txt
precondInfer/tools/backward-ai/: CMakeLists.txt  backward-ai.cpp
scripts/: build.sh  icfg_index.py  instrument.sh  preinstall.sh  run.sh
